<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_menu_camera"-->
<!--            android:title="@string/menu_home" />-->
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->

        <item
            android:id="@+id/nav_dashbaord"
            android:icon="@drawable/ic_menu_dashbord"
            android:title="@string/menu_dashboard" />
<!--        <item-->
<!--            android:id="@+id/nav_history"-->
<!--            android:icon="@drawable/ic_menu_history"-->
<!--            android:title="@string/menu_history" />-->
        <item
            android:id="@+id/nav_parametre"
            android:icon="@drawable/ic_parameter"
            android:title="@string/menu_parametre" />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/car"
            android:title="@string/menu_vehicles" />
    </group>
</menu>